preventing text overflow on cardboard formatted ids

--- a/client/styles/_board.less
+++ b/client/styles/_board.less
@@ -51,6 +51,7 @@
             }
             .formatted-id {
                 color: @cyan;
+                overflow: hidden;
             }
 
             .owner {
